# kon

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kon/: __init__.py  parser.py  types.py
tests/: README.md  test_comments.py  test_dicts.py  test_errors.py  test_file_io.py  test_lists.py  test_pretty.py  test_primitives.py  test_roundabout.py  test_strings.py
