[project]
name = "kon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kerem Göksu", email = "superkerem13@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
typing-extensions = [
    "typing-extensions>=4.13.2",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
